# advent-of-code-rust

./: Cargo.toml
src/: lib.rs  main.rs
src/template/: aoc_cli.rs  mod.rs  readme_benchmarks.rs  run_multi.rs
src/template/commands/: scaffold.rs  solve.rs
