[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"
regex = "1.10.2"

# Solution dependencies
num = "0.4.0"


[[bin]]
name = "2024_01"
path = "src/bin/2024/01.rs"

[[bin]]
name = "2024_02"
path = "src/bin/2024/02.rs"

[[bin]]
name = "2024_03"
path = "src/bin/2024/03.rs"

[[bin]]
name = "2024_04"
path = "src/bin/2024/04.rs"

[[bin]]
name = "2024_05"
path = "src/bin/2024/05.rs"

[[bin]]
name = "2024_06"
path = "src/bin/2024/06.rs"

[[bin]]
name = "2024_09"
path = "src/bin/2024/09.rs"

[[bin]]
name = "2024_11"
path = "src/bin/2024/11.rs"


[[bin]]
name = "2024_12"
path = "src/bin/2024/12.rs"

[[bin]]
name = "2024_13"
path = "src/bin/2024/13.rs"

[[bin]]
name = "2024_14"
path = "src/bin/2024/14.rs"
